--- a/Exercicios/OLogador/app/src/main/res/layout/activity_main.xml
+++ b/Exercicios/OLogador/app/src/main/res/layout/activity_main.xml
@@ -6,82 +6,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="15pt"
         tools:context=".MainActivity">
 
     <LinearLayout
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        <TextView
-                android:text="O Logador"
-                android:textSize="26pt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
-    </LinearLayout>
-    <LinearLayout
-            android:layout_weight="2"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-        <TextView
-                android:text="Login"
-                android:textSize="12pt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-        />
         <EditText
-
                 android:id="@+id/etLogin"
-                android:inputType="text"
+                android:gravity="center"
+                android:hint="LOGIN"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
     </LinearLayout>
 
     <LinearLayout
-            android:layout_weight="2"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-        <TextView
-                android:labelFor="@+id/etSenha"
-                android:text="Senha"
-                android:textSize="12pt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        <EditText
-                android:hint="digite"
-                android:inputType="textPassword"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/etSenha"/>
-
-    </LinearLayout>
-    <LinearLayout
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
+        <EditText
+                android:id="@+id/etSenha"
+                android:gravity="center"
+                android:hint="SENHA"
+                android:inputType="numberPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         <Button
                 android:id="@+id/btOk"
-                android:text="Ok"
-                android:layout_margin="20dp"
+                android:text="OK"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
         <Button
                 android:id="@+id/btCancelar"
-                android:text="Cancelar"
+                android:text="cancela"
                 android:layout_width="wrap_content"
-                android:layout_margin="20dp"
                 android:layout_height="wrap_content"/>
-
     </LinearLayout>
-
-
 </LinearLayout>
